[metadata]
name = genkit
version = 0.0.1
author = Google
description = A GenAI framework
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache2.0

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    pydantic
    opentelemetry-api
    opentelemetry-sdk
    requests
    google-cloud-aiplatform>=1.64
    pybars3
python_requires = >=3.10

[tool.autopep8]
max_line_length = 120
ignore = E501,W6
in-place = true
recursive = true
aggressive = 3