# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[project]
description = "ChromaDB vector store plugin for Genkit"
license     = "Apache-2.0"
name        = "genkit-plugin-chroma"
readme      = "README.md"
version     = "0.1.0"
# TODO: Update requires-python to >=3.10 when onnxruntime adds Python 3.14 wheels.
# Track: https://github.com/microsoft/onnxruntime/issues/21292
authors = [{ name = "Google LLC" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["genkit", "ai", "vector-store", "chromadb", "rag", "retrieval"]
requires-python = ">=3.10,<3.14" # chromadb depends on onnxruntime which lacks Python 3.14 wheels

dependencies = ["genkit>=0.4.0", "chromadb>=0.4.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0"]

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/genkit"]
