# Copyright 2025 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [
  {email = "nicholaschiasson@google.com", name = "Nicholas Chiasson"},
]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "genkit>=1.0.0",
  "cloud-sql-python-connector[asyncpg]>=1.14.0",
  "sqlalchemy[asyncio]>=2.0.0",
  "asyncpg>=0.30.0",
  "pgvector>=0.3.0",
  "google-auth>=2.0.0",
]
description = "Cloud SQL PostgreSQL vector store plugin for Genkit AI framework"
dynamic = ["version"]
keywords = ["ai", "genkit", "cloud-sql", "postgresql", "pgvector", "vector-store", "rag"]
license = {text = "Apache-2.0"}
name = "genkit-cloud-sql-pg-plugin"
readme = "README.md"
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.5",
  "pytest-asyncio>=0.24.0",
  "pytest-mock>=3.14.0",
]

[project.urls]
Documentation = "https://firebase.google.com/docs/genkit"
Homepage = "https://github.com/firebase/genkit/tree/main/py/plugins/cloud-sql-pg"
Repository = "https://github.com/firebase/genkit"

[tool.hatch.build.targets.wheel]
packages = ["src/genkit"]

[tool.hatch.version]
path = "src/genkit/plugins/cloud_sql_pg/__init__.py"
