[project]
authors = [{ name = "Google" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries",
]
dependencies = ["genkit", "ollama~=0.4", "structlog>=25.2.0"]
description = "Genkit Ollama Plugin"
license = { text = "Apache-2.0" }
name = "genkit-plugin-ollama"
readme = "README.md"
requires-python = ">=3.10"
version = "0.3.0.dev1"

[build-system]
build-backend = "hatchling.build"
requires      = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["src/genkit", "src/genkit/plugins"]
