[project]
dependencies = [
  "aioia",
  "litestar>=2.15.1",
  "starlette>=0.46.1",
  "structlog>=25.2.0",
  "uvloop>=0.21.0",
]
description = "Sample implementation to exercise the aioia multi server manager."
name = "aioia-multi-server"
readme = "README.md"
requires-python = ">=3.12"
version = "0.1.0"
